* introduced events specific to OSGi application contexts
* introduced listener interface OsgiBundleApplicationContextListener for OSGi context events
* added bundle version to the application context OSGi service

Package org.springframework.osgi.extender
* ContextLoaderListener automatically detects and notifies OSGi services registered as 
  OsgiBundleApplicationContextListener classes

Package org.springframework.osgi.io
* added support for classpath: and classpath*: patterns

Package org.springframework.osgi.test
* FelixPlatform uses the Felix distribution default system packages
* KnopflerfishPlatform uses the KF distribution default system packages
* AbstractOnTheFlyBundleCreatorTests can now generate imports based on all classes available in the jar not just the 
  test hierarchy

Package org.springframework.osgi.util
* BundleDelegatingClassLoader exposes the internal Bundle through getBundle() method


Changes in version 1.0.2 (2008-03-25)
-------------------------------------

General
* adjusted the manifests so internal packages are not exported and the versions for both spring and spring-osgi are
  present

Package org.springframework.osgi.context
* AbstractOsgiBundleApplicationContext registers the application context as an OSGi service using just the interfaces

Package org.springframework.osgi.extender
* raised service dependency waiting logging level to INFO (from DEBUG)

Package org.springframework.osgi.util
* BundleDelegatingClassLoader relies on default hashCode/equals methods to prevent class caching on bundle updates

Package org.springframework.osgi.test
* Installed bundles have the location set to the backing resource URL if possible, falling back to the description


Changes in version 1.0.1 (2008-02-29)
-------------------------------------

General
* fixed nested Eclipse classpath entry in spring-osgi bundle archetype
* added log4j.properties to spring-osgi bundle archetype
* added OSGi integration test to the spring-osgi bundle archetype
